--- a/websitedemo.github.io/index.html
+++ b/websitedemo.github.io/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>BACS 200 Folder Index</h1>
+    <h2>Projects</h2>
+    <ul>
+        <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
+        <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+        <li>Week 3 - <a href="amuse.html">Project 3 - Amuse Me</a> </li>
+        <li>Week 4 - <a href="educate.html">Project 4 - Educate Me</a></li>
+        <li>Week 5 - <a href="test.html">Project 5 - Test Page</a></li>
+        <li>Week 6 - <a href="superhero.html">Project 6 - Superhero Table</a></li>
+        <li>Week 7 - <a href="wanted.html">Project 7 - Wanted Poster</a></li>
+    </ul>
+    <p>
+        <a href="profile.html">My Profile</a>
+    </p>
+    <p><img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo"></p>
+</body>
+
+</html>
