--- a/websitedemo/index.html
+++ b/websitedemo/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to my website</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <h2>Section 1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor aliquam est, nec pulvinar metus consequat vel. Sed consectetur nisl in ultricies sodales. Suspendisse a arcu eget dolor malesuada eleifend vel vel massa. Fusce at odio vel arcu sagittis malesuada in sit amet leo.</p>
-      </section>
-      <section>
-        <h2>Section 2</h2>
-        <p>Curabitur hendrerit mi id diam sagittis, nec varius urna eleifend. Quisque at commodo lectus. Fusce posuere, felis quis elementum commodo, odio nunc gravida lorem, a auctor purus justo sed purus. Maecenas semper euismod ex, vitae commodo lorem consequat ac.</p>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2023 My Website</p>
-    </footer>
-  </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>BACS 200 Folder Index</h1>
+    <h2>Projects</h2>
+    <ul>
+        <li>Week 1 - <a href="../index.html">Project 1 - Github Repo</a> </li>
+        <li>Week 2 - <a href="inspire.html">Project 2 - Inspire Me</a> </li>
+        <li>Week 3 - <a href="amuse.html">Project 3 - Amuse Me</a> </li>
+        <li>Week 4 - <a href="educate.html">Project 4 - Educate Me</a></li>
+        <li>Week 5 - <a href="test.html">Project 5 - Test Page</a></li>
+        <li>Week 6 - <a href="superhero.html">Project 6 - Superhero Table</a></li>
+        <li>Week 7 - <a href="wanted.html">Project 7 - Wanted Poster</a></li>
+    </ul>
+    <p>
+        <a href="profile.html">My Profile</a>
+    </p>
+    <p><img src="https://shrinking-world.com/static/images/unc/bacs200/Bear_Logo.png" alt="Logo"></p>
+</body>
+
 </html>
